kubernetes/k3s-01/workloads/hortusfox/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hortusfox
  namespace: hortusfox
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hortusfox
  template:
    metadata:
      labels:
        app: hortusfox
    spec:
      containers:
        - name: hortusfox
          image: ghcr.io/danielbrendel/hortusfox-web:v6.2@sha256:5f4b90126b0b9cb35e5a1c445e49fdfd9c8dc820697fafe7674f23e42b050a2d
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 384Mi
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: hortusfox
              mountPath: /var/www/html/app/logs/
              subPath: logs/
            - name: hortusfox
              mountPath: /var/www/html/app/migrations/
              subPath: migrations/
            - name: hortusfox
              mountPath: /var/www/html/public/backup/
              subPath: backup/
            - name: hortusfox
              mountPath: /var/www/html/public/img/
              subPath: img/
            - name: hortusfox
              mountPath: /var/www/html/public/themes/
              subPath: themes/
      volumes:
        - name: hortusfox
          persistentVolumeClaim:
            claimName: hortusfox
