kubernetes/k3s-01/workloads/hortusfox/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hortusfox
  namespace: hortusfox
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: hortusfox
