kubernetes/k3s-01/workloads/hortusfox/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hortusfox
  namespace: hortusfox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hortusfox.47fc5c.com`)
      kind: Rule
      services:
        - name: hortusfox
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: hortusfox-certificate
